--- a/src/app/styles/scss/home.scss
+++ b/src/app/styles/scss/home.scss
@@ -1,19 +1,42 @@
 
 
+.home-text{
+	font-size: 2em;	
+}
 
 .searchbar-icon {
 	margin-left: -40px;
 	margin-top: 15px;
 	font-size: 18px;
-	color: #7fe8b9;
+	color: $main-green;
     z-index: 100;
 }
 
 .searchbar{
 	border-radius: 25px!important;
--webkit-box-shadow: 0px 5px 26px -2px rgba(0,0,0,0.16);
--moz-box-shadow: 0px 5px 26px -2px rgba(0,0,0,0.16);
-box-shadow: 0px 5px 26px -2px rgba(0,0,0,0.16);
-border-color: #fcfcfc !important;
-
+	-webkit-box-shadow: 0px 5px 26px -2px rgba(0,0,0,0.16);
+	-moz-box-shadow: 0px 5px 26px -2px rgba(0,0,0,0.16);
+	box-shadow: 0px 5px 26px -2px rgba(0,0,0,0.16);
+	border-color: #fcfcfc !important;	
 }
+
+.searchbar::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: black !important;
+    opacity: .3 !important; /* Firefox */
+    font-size: 14px !important;
+}
+
+
+
+.searchbar-col {
+	margin-top: 10px !important;
+}
+
+
+.test{
+	-webkit-column-gap: 0px; /* Chrome, Safari, Opera */
+    -moz-column-gap: 0px; /* Firefox */
+    column-gap: 0px;
+}    
+
+
