--- a/public/static/styles/bundled.css
+++ b/public/static/styles/bundled.css
@@ -45,6 +45,13 @@
   font-size: 2em;
 }
 
+#home-people-img {
+  position: absolute;
+  left: -150px;
+  top: 100px;
+  width: 140%;
+}
+
 .searchbar-icon {
   margin-left: -40px;
   margin-top: 15px;
