--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Otito</title>
 	<link href="/public/styles/bundled.css" rel="stylesheet" />
+	<link href="/public/styles/snappy.css" rel="stylesheet" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="/public/third-party-packages/fontawesome/css/all.css">
