--- a/src/app/styles/scss/footer.scss
+++ b/src/app/styles/scss/footer.scss
@@ -5,3 +5,16 @@
 		height: 30px;
 	}
 }
+
+
+.footer {
+	background-color: #3c3c3c;
+	color: #ececec;
+
+	.footer-text {
+		color: #7add7b;
+		font-weight: 800;
+		font-size: 25px;
+	}
+}
+
