--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<title>Otito</title>
 	<link href="/public/styles/bundled.css" rel="stylesheet" />
-	<link href="/public/styles/snappy.css" rel="stylesheet" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="/public/third-party-packages/fontawesome/css/all.css">
@@ -15,11 +14,14 @@
 
 
 
-	<script src="/public/js/bundled.js"></script>
+
+	
+
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+	<script src="/public/js/jquery.ba-throttle-debounce.js"></script>
+	<script src="/public/js/bundled.js"></script>
 
 </body>
 </html>
