fix react router

--- a/src/app/styles/scss/home.scss
+++ b/src/app/styles/scss/home.scss
@@ -2,7 +2,7 @@
 .home-header{
 	z-index: 10;
 	position:relative;
-	letter-spacing: .10em; /* Adjust as needed */
+//	letter-spacing: .10em; /* Adjust as needed */
 }
 
 
