--- a/src/app/styles/scss/header.scss
+++ b/src/app/styles/scss/header.scss
@@ -4,8 +4,11 @@
 
 
 #main-navbar {
-	height: 114px !important;
-	
+	//height: 114px !important;
+	//max-height: 114px !important;
+	margin: 0px !important;
+	padding: 0px !important;
+
 	.menu-item{
 		padding: 0px;
 		margin-left: 15px !important;
