--- a/public/static/styles/bundled.css
+++ b/public/static/styles/bundled.css
@@ -2,6 +2,7 @@
 #main-navbar {
   margin: 0px !important;
   padding: 0px !important;
+  top: 40px !important;
 }
 #main-navbar .menu-item {
   padding: 0px;
@@ -65,10 +66,10 @@
   text-align: center;
   height: 100vh;
   overflow: auto;
-  padding: 100px;
+  padding: 50px 50px 0px 50px;
 }
 .slide .slide-description {
-  padding-top: 40px;
+  padding: 40px;
 }
 .slide img {
   margin: 20px;
@@ -175,7 +176,7 @@ section {
 }
 section a {
   position: absolute;
-  bottom: 20px;
+  bottom: 70px;
   left: 50%;
   z-index: 2;
   display: inline-block;
@@ -202,17 +203,8 @@ section a:hover {
 }
 
 .section-body {
-  height: 110vh;
-  max-height: 110vh;
-}
-
-section::after {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  content: "";
-  width: 100%;
   height: 100vh;
+  max-height: 100vh;
 }
 
 #section03 {
@@ -247,14 +239,15 @@ section::after {
   background: url(https://picsum.photos/1200/800?image=516) center center/cover no-repeat;
 }
 
-#section01 a {
-  padding-top: 60px;
+#section01 div a {
   color: black;
+  margin-left: -50px;
+  text-decoration: none;
 }
 
-#section01 a span {
+#section01 div a span {
   position: absolute;
-  top: 0;
+  top: 20px;
   left: 50%;
   width: 24px;
   height: 24px;
@@ -267,18 +260,14 @@ section::after {
   box-sizing: border-box;
 }
 
-#section02 a {
-  padding-top: 60px;
-}
-
-#section02 a span {
+#section02 div a span {
   position: absolute;
   top: 0;
   left: 50%;
   width: 46px;
   height: 46px;
   margin-left: -23px;
-  border: 1px solid black;
+  border: 1px solid white;
   border-radius: 100%;
   box-sizing: border-box;
 }
@@ -291,15 +280,11 @@ section::after {
   width: 16px;
   height: 16px;
   margin: -12px 0 0 -8px;
-  border-left: 1px solid black;
-  border-bottom: 1px solid black;
+  border-left: 1px solid white;
+  border-bottom: 1px solid white;
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
   box-sizing: border-box;
-}
-
-#section03 a {
-  padding-top: 60px;
 }
 
 #section03 a span {
@@ -309,7 +294,7 @@ section::after {
   width: 46px;
   height: 46px;
   margin-left: -23px;
-  border: 1px solid black;
+  border: 1px solid white;
   border-radius: 100%;
   box-sizing: border-box;
 }
@@ -322,8 +307,8 @@ section::after {
   width: 16px;
   height: 16px;
   margin: -12px 0 0 -8px;
-  border-left: 1px solid black;
-  border-bottom: 1px solid black;
+  border-left: 1px solid white;
+  border-bottom: 1px solid white;
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
   box-sizing: border-box;
