--- a/src/app/styles/scss/header.scss
+++ b/src/app/styles/scss/header.scss
@@ -8,6 +8,7 @@
 	//max-height: 114px !important;
 	margin: 0px !important;
 	padding: 0px !important;
+	top: 40px !important;
 
 	.menu-item{
 		padding: 0px;
