--- a/src/app/styles/scss/home.scss
+++ b/src/app/styles/scss/home.scss
@@ -14,10 +14,12 @@
     text-align: center;
     height: 100vh;
     overflow: auto;
-    padding: 100px;
+    padding: 50px 50px 0px 50px;
 
     .slide-description{
-    	padding-top: 40px;
+    	padding: 40px;
+
+
     }  
 
     img {
