change description color

--- a/src/app/styles/scss/home.scss
+++ b/src/app/styles/scss/home.scss
@@ -11,14 +11,14 @@
 
 
 .slide{
-    text-align: center;
+
     height: 100vh;
     overflow: auto;
     padding: 50px 50px 0px 50px;
 
     .slide-description{
     	padding: 40px;
-
+    	color: #e5e5e5;
 
     }  
 
