--- a/public/static/styles/bundled.css
+++ b/public/static/styles/bundled.css
@@ -63,13 +63,13 @@
 }
 
 .slide {
-  text-align: center;
   height: 100vh;
   overflow: auto;
   padding: 50px 50px 0px 50px;
 }
 .slide .slide-description {
   padding: 40px;
+  color: #e5e5e5;
 }
 .slide img {
   margin: 20px;
