--- a/src/app/styles/scss/home.scss
+++ b/src/app/styles/scss/home.scss
@@ -18,7 +18,13 @@
 
     .slide-description{
     	padding: 40px;
-    	color: #e5e5e5;
+
+    	p {
+    		color: #e5e5e5;
+    		font-weight: 600;
+    		font-size: 20px;
+    	}
+    	
 
     }  
 
