--- a/src/app/styles/scss/footer.scss
+++ b/src/app/styles/scss/footer.scss
@@ -7,9 +7,15 @@
 }
 
 
+.main-footer{
+	z-index: 1000;
+}
+
+
 .footer {
 	background-color: #3c3c3c;
 	color: #ececec;
+
 
 	.footer-text {
 		color: #7add7b;
