--- a/public/static/styles/bundled.css
+++ b/public/static/styles/bundled.css
@@ -17,6 +17,14 @@
   border-radius: 50%;
 }
 
+.navbar-light .nav-item.active .nav-link,
+.navbar-light .nav-item .nav-link:active,
+.navbar-light .nav-item .nav-link:focus,
+.navbar-light .nav-item:hover .nav-link {
+  color: black;
+  font-weight: 800;
+}
+
 .active-tab {
   font-weight: 900;
   text-decoration: underline;
