--- a/src/app/styles/scss/join.scss
+++ b/src/app/styles/scss/join.scss
@@ -1,11 +1,12 @@
 .join-me-text{
-	position: relative;
-	z-index: 100;
+  padding-top: 100px;
+	// position: relative;
+	z-index: 1;
 }
 
 
 .upscribe-form-join{
   width:100%;max-width:800px;margin:0 auto;
   margin-top: -40px !important; 
-  z-index: 10;
+  // z-index: 10;
 }
