--- a/src/app/styles/scss/base.scss
+++ b/src/app/styles/scss/base.scss
@@ -34,9 +34,7 @@ $main-green: #7fe8b9;
 // No media query since this is the default in Bootstrap
 
 // Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {  
-
-}
+@media (min-width: 576px) {  }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {  }
@@ -52,7 +50,7 @@ $main-green: #7fe8b9;
 
 html, body {
 	height: 100%;
-	font-size: 12px;
+	font-size: 100%;
 
 }
 
@@ -92,7 +90,22 @@ html, body {
   height: calc(100vh - 180px);
 }
 
-
+.full-width-container{
+  overflow: auto;
+  padding: 0 200px 0 200px;
+  @media only screen and (max-width : 979px) {
+    padding: 0 50px 0 50px;
+  }
+  // @media only screen and (max-width : 768px) {
+  // 	font-size: 30px;
+  // }
+  @media only screen and (max-width : 576px) {
+    padding: 0 20px 0 20px;
+  }
+  // @media only screen and (max-width : 320px) {
+  // 	font-size: 24px;
+  // }
+}
 
 
 
