--- a/src/app/styles/scss/header.scss
+++ b/src/app/styles/scss/header.scss
@@ -1,15 +1,10 @@
-
-
-
-
-
 #main-navbar {
 	//height: 114px !important;
 	//max-height: 114px !important;
 	margin: 0px !important;
 	padding: 0px !important;
 	top: 40px !important;
-
+	z-index: 200px;
 	.menu-item{
 		padding: 0px;
 		margin-left: 15px !important;
