--- a/src/app/styles/scss/home.scss
+++ b/src/app/styles/scss/home.scss
@@ -1,35 +1,22 @@
-
-.home-header{
-   width: 100%;
-   display: block;
-
-
-
-}
-
-
-
-
 .slide{
 
     height: 100vh;
-    overflow: auto;
+    overflow: hidden;
     padding: 50px 50px 0px 50px;
 
     .slide-description{
-    	padding: 40px;
-
+		padding: 40px; 
+		@media only screen and (max-width : 768px) {
+			padding: 0px;
+		}
     	p {
     		color: #e5e5e5;
     		font-weight: 600;
     		font-size: 20px;
     	}
-    	
-
     }  
 
     img {
-    	margin: 20px;
     	padding: 0px;
         -webkit-box-shadow: 0px 0px 5px 3px rgba(89,87,89,0.3);
 		-moz-box-shadow: 0px 0px 5px 3px rgba(89,87,89,0.3);
@@ -48,7 +35,7 @@
 }
 
 .slide-three{
-	background-image: url("/public/images/backgrounds/cocoa.jpg");
+	background-image: url("/public/images/backgrounds/cocoa.jpg"); 
 	color: white;
 }
 
@@ -57,18 +44,31 @@
 	color: white;
 }
 
-
-
-.home-text{
-	font-size: 2em;	
-	z-index: 9;
-}
-
 .home-description{
-	z-index: 100;
+	z-index: 1 !important;
 	position: relative !important;
+	padding: 100px 20px 0px 20px;
+	font-weight: bold;
+	font-size: 38px;
+	@media only screen and (max-width : 979px) {
+		font-size: 34px;
+	}
+	@media only screen and (max-width : 768px) {
+		padding-top: 70px;
+		font-size: 30px;
+	}
+	@media only screen and (max-width : 576px) {
+		padding-top: 50px;
+		font-size: 26px;
+	}
+	@media only screen and (max-width : 320px) {
+		font-size: 24px;
+    }
 }
 
+.form-page {
+	background-color: rgba(201, 76, 76, 0.0) !important;
+}
 
 #home-people-img {
 	position: absolute;
@@ -93,9 +93,9 @@
 	border-color: #fcfcfc !important;	
 }
 
-.searchbar::placeholder { 
+.searchbar::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: black !important;
-    opacity: .3 !important; 
+    opacity: .3 !important; /* Firefox */
     font-size: 14px !important;
 }
 
@@ -111,10 +111,18 @@
 }
 
 
+.test{
+	-webkit-column-gap: 0px; /* Chrome, Safari, Opera */
+    -moz-column-gap: 0px; /* Firefox */
+    column-gap: 0px;
+}    
 
-.upscribe-form-home {
-  margin:0 auto;
-  z-index: 1;
+
+.upscribe-form-home{
+  width:100%;max-width:800px;margin:0 auto;
+  margin-top: -80px !important; 
 }
+
+
 
 
