--- a/src/app/styles/scss/home_scroll.scss
+++ b/src/app/styles/scss/home_scroll.scss
@@ -18,9 +18,9 @@ section {
   width: 100%;
   height: 90vh;
   max-height: 90vh;
-  a#see-more-link {
+  a {
     position: absolute;
-    bottom: 25px;
+    bottom: 70px;
     left: 50%;
     z-index: 2;
     display: inline-block;
@@ -87,12 +87,13 @@ section::after {
 
 #section01 div a {
   color: black;
-  margin-left: -50px;
+  margin-left: -50px !important;
   text-decoration:none;
+  bottom: 10px;
 }
 #section01 div a span {
   position: absolute;
-  top: 20px;
+  bottom: 0px;
   left: 50%;
   width: 24px;
   height: 24px;
@@ -103,9 +104,22 @@ section::after {
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
   box-sizing: border-box;
+  @media only screen and (max-width : 576px) {
+		margin-left: 40px;
+  }
+  @media only screen and (max-height : 568px) {
+		display: none;
+  }
 }
 
-
+#section01 div a p {
+  @media only screen and (max-width : 576px) {
+		display:none;
+  }
+  @media only screen and (max-height : 568px) {
+		display: none;
+  }
+}
 
 
 #section02 div a span {
@@ -115,6 +129,7 @@ section::after {
   width: 46px;
   height: 46px;
   margin-left: -23px;
+  border: 1px solid white;
   border-radius: 100%;
   box-sizing: border-box;
 }
@@ -154,9 +169,9 @@ section::after {
   content: '';
   width: 16px;
   height: 16px;
-  margin: -12px 0 0 -8px;
-  border-left: 1px solid white;
-  border-bottom: 1px solid white;
+  margin: -4px 0 0 -8px;
+  border-right: 1px solid white;
+  border-top: 1px solid white;
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
   box-sizing: border-box;
@@ -536,15 +551,3 @@ section::after {
     opacity: 0;
   }
 }
-
-
-
-
-#upscribe-form-link {
-    width: 100% !important;
-    position: absolute !important;
-    bottom: 80px !important;
-    font-size: 2.4em !important;
-    color: #285fb7 !important;
-}
-
