--- a/src/app/styles/scss/header.scss
+++ b/src/app/styles/scss/header.scss
@@ -4,7 +4,9 @@
 	margin: 0px !important;
 	padding: 0px !important;
 	top: 40px !important;
-	z-index: 200px;
+	z-index: 200;
+	background-color: white;
+	
 	.menu-item{
 		padding: 0px;
 		margin-left: 15px !important;
