--- a/public/static/styles/bundled.css
+++ b/public/static/styles/bundled.css
@@ -3,7 +3,8 @@
   margin: 0px !important;
   padding: 0px !important;
   top: 40px !important;
-  z-index: 200px;
+  z-index: 200;
+  background-color: white;
 }
 #main-navbar .menu-item {
   padding: 0px;
@@ -73,8 +74,9 @@
 }
 
 .slide {
-  height: 100vh;
-  overflow: hidden;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
   padding: 50px 50px 0px 50px;
 }
 .slide .slide-description {
@@ -141,6 +143,11 @@
     font-size: 24px;
   }
 }
+@media only screen and (max-height: 568px) {
+  .home-description {
+    font-size: 26px;
+  }
+}
 
 .form-page {
   background-color: rgba(201, 76, 76, 0) !important;
@@ -196,8 +203,23 @@
 .upscribe-form-home {
   width: 100%;
   max-width: 800px;
+  max-height: 300px;
   margin: 0 auto;
-  margin-top: -80px !important;
+  padding: 0;
+}
+
+#section01 .form-page-form .contact-fields .form-control {
+  height: 10px !important;
+  padding: 8px 10px;
+  font-size: 14px;
+  font-weight: 300;
+  resize: none;
+  border: 1px solid #d2beb6 !important;
+  border-radius: 4px !important;
+  background: 0 0 !important;
+  background-color: #fff !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
 }
 
 * {
@@ -281,6 +303,7 @@ section a:hover {
 }
 
 #section01 div a {
+  position: relative;
   color: black;
   margin-left: -50px !important;
   text-decoration: none;
@@ -300,27 +323,6 @@ section a:hover {
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
   box-sizing: border-box;
-}
-@media only screen and (max-width: 576px) {
-  #section01 div a span {
-    margin-left: 40px;
-  }
-}
-@media only screen and (max-height: 568px) {
-  #section01 div a span {
-    display: none;
-  }
-}
-
-@media only screen and (max-width: 576px) {
-  #section01 div a p {
-    display: none;
-  }
-}
-@media only screen and (max-height: 568px) {
-  #section01 div a p {
-    display: none;
-  }
 }
 
 #section02 div a span {
@@ -766,14 +768,15 @@ section a:hover {
 }
 
 .main-header {
-  height: 10vh;
-  max-height: 10vh;
-  z-index: 100;
+  height: 12vh;
+  max-height: 12vh;
+  z-index: 999;
 }
 
 .main-body {
   height: 70%;
   max-height: 70%;
+  background-color: white;
 }
 
 .main-footer {
@@ -811,7 +814,7 @@ html, body {
 }
 
 .full-width-container {
-  height: calc(100vh - 180px);
+  height: calc(100vh - 80px);
 }
 
 .full-width-container {
