--- a/src/app/styles/scss/home_scroll.scss
+++ b/src/app/styles/scss/home_scroll.scss
@@ -86,6 +86,7 @@ section::after {
 
 
 #section01 div a {
+  position: relative;
   color: black;
   margin-left: -50px !important;
   text-decoration:none;
@@ -104,21 +105,21 @@ section::after {
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
   box-sizing: border-box;
-  @media only screen and (max-width : 576px) {
-		margin-left: 40px;
-  }
-  @media only screen and (max-height : 568px) {
-		display: none;
-  }
+  // @media only screen and (max-width : 576px) {
+	// 	margin-left: 40px;
+  // }
+  // @media only screen and (max-height : 660px) {
+	// 	display: none;
+  // }
 }
 
 #section01 div a p {
-  @media only screen and (max-width : 576px) {
-		display:none;
-  }
-  @media only screen and (max-height : 568px) {
-		display: none;
-  }
+  // @media only screen and (max-width : 576px) {
+	// 	display:none;
+  // }
+  // @media only screen and (max-height : 660px) {
+	// 	display: none;
+  // }
 }
 
 
