--- a/src/app/styles/scss/footer.scss
+++ b/src/app/styles/scss/footer.scss
@@ -12,8 +12,8 @@
 }
 
 
-.footer {
-	// position: absolute;
+#footer {
+	position: relative !important;
 	width: 100%;
 	bottom: 0;
 	background-color: #3c3c3c;
