--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -7,7 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="/public/third-party-packages/fontawesome/css/all.css">
-
+	<meta
+		name="description"
+		content="Society's most democratic tool for documenting and sharing objectively verifiable political and socio-cultural truth."
+	/>
 </head>
 <body>
   	<div id="app" class=""></div>
