--- a/src/app/styles/scss/base.scss
+++ b/src/app/styles/scss/base.scss
@@ -9,7 +9,7 @@ $main-green: #7fe8b9;
 @import 'home.scss';
 @import 'home_scroll.scss';
 @import 'join.scss';
-
+@import 'about.scss';
 
 .main-header{
   height: 12vh;
@@ -26,8 +26,10 @@ $main-green: #7fe8b9;
 }
 
 .main-footer{
+  position: relative !important;
   height: 5vh;
    max-height: 5vh;
+   bottom: 0;
    //border: 2px solid blue;
 }
 
@@ -80,28 +82,24 @@ html, body {
 	height: 100% !important;
 }
 
-.themes {
-	
-	
-
-}
-
 
 .full-width-container {
-  height: calc(100vh - 80px);
+  // height: calc(100vh - 80px);
+  // height: 100%;
+  min-height: 100%;
 }
 
 .full-width-container{
   overflow: auto;
-  padding: 0 200px 0 200px;
+  padding: 100px 200px 100px 200px;
   @media only screen and (max-width : 979px) {
-    padding: 0 50px 0 50px;
+    padding: 70px 50px 50px 50px;
   }
   // @media only screen and (max-width : 768px) {
   // 	font-size: 30px;
   // }
   @media only screen and (max-width : 576px) {
-    padding: 0 20px 0 20px;
+    padding: 70px 20px 50px 20px;
   }
   // @media only screen and (max-width : 320px) {
   // 	font-size: 24px;
