add sharing feature & favicon

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -3,8 +3,9 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>òtító | a platform for documenting and sharing truth</title>
-	<link href="/public/styles/bundled.css" rel="stylesheet" />
+	<link rel="shortcut icon" type="image/png" href="/public/images/otito-logo_burned.png"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="/public/styles/bundled.css" rel="stylesheet" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="/public/third-party-packages/fontawesome/css/all.css">
 	<meta
@@ -15,7 +16,7 @@
 <body>
   	<div id="app" class=""></div>
 
-
+	<script async>(function(s,u,m,o,j,v){j=u.createElement(m);v=u.getElementsByTagName(m)[0];j.async=1;j.src=o;j.dataset.sumoSiteId='d2e6e0ac3559094233eaa7205ce2c44b18fc5c1f63497491c684aae8e743cd07';v.parentNode.insertBefore(j,v)})(window,document,'script','//load.sumo.com/');</script>
 
 
 	
