responsiveness on bigger screens

--- a/src/app/styles/scss/home_scroll.scss
+++ b/src/app/styles/scss/home_scroll.scss
@@ -72,7 +72,7 @@ section::after {
 
 //#section01 { background: url(https://picsum.photos/1200/800?image=575) center center / cover no-repeat;}
 //#section02 { background: url(https://picsum.photos/1200/800?image=1016) center center / cover no-repeat;}
-#section03 { background: url(https://picsum.photos/1200/800?image=869) center center / cover no-repeat;}
+// #section03 { background: url(https://picsum.photos/1200/800?image=869) center center / cover no-repeat;}
 #section04 { background: url(https://picsum.photos/1200/800?image=506) center center / cover no-repeat;}
 #section05 { background: url(https://picsum.photos/1200/800?image=1037) center center / cover no-repeat;}
 #section06 { background: url(https://picsum.photos/1200/800?image=901) center center / cover no-repeat;}
