--- a/public/static/styles/bundled.css
+++ b/public/static/styles/bundled.css
@@ -99,21 +99,32 @@
   -webkit-box-shadow: 0px 0px 5px 3px rgba(89, 87, 89, 0.3);
   -moz-box-shadow: 0px 0px 5px 3px rgba(89, 87, 89, 0.3);
   box-shadow: 0px 0px 5px 3px rgba(89, 87, 89, 0.3);
+  width: 100%;
+  height: auto;
 }
 
 .slide-two {
   background-image: url("/public/images/backgrounds/blues.jpg");
   color: white;
+  width: 100%;
+  height: 100%;
+  background-size: 100% 100%;
 }
 
 .slide-three {
   background-image: url("/public/images/backgrounds/cocoa.jpg");
   color: white;
+  width: 100%;
+  height: 100%;
+  background-size: 100% 100%;
 }
 
 .slide-four {
   background-image: url("/public/images/backgrounds/subu.jpg");
   color: white;
+  width: 100%;
+  height: 100%;
+  background-size: 100% 100%;
 }
 
 .home-description {
@@ -270,10 +281,6 @@ section a:hover {
 .section-body {
   height: 100vh;
   max-height: 100vh;
-}
-
-#section03 {
-  background: url(https://picsum.photos/1200/800?image=869) center center/cover no-repeat;
 }
 
 #section04 {
