--- a/src/app/styles/scss/home.scss
+++ b/src/app/styles/scss/home.scss
@@ -22,7 +22,8 @@
         -webkit-box-shadow: 0px 0px 5px 3px rgba(89,87,89,0.3);
 		-moz-box-shadow: 0px 0px 5px 3px rgba(89,87,89,0.3);
 		box-shadow: 0px 0px 5px 3px rgba(89,87,89,0.3);
-
+		width: 100%;
+		height: auto;
     }
 }
 // scroll bar 
@@ -56,16 +57,25 @@
 .slide-two{
 	background-image: url("/public/images/backgrounds/blues.jpg");
 	color: white;
+	width: 100%;
+	height: 100%;
+	background-size: 100% 100%;
 }
 
 .slide-three{
 	background-image: url("/public/images/backgrounds/cocoa.jpg"); 
 	color: white;
+	width: 100%;
+	height: 100%;
+	background-size: 100% 100%;
 }
 
 .slide-four{
 	background-image: url("/public/images/backgrounds/subu.jpg");
 	color: white;
+	width: 100%;
+	height: 100%;
+	background-size: 100% 100%;
 }
 
 .home-description{
